# Customer-Agent

./: README.md  app.py  config.py  pyproject.toml  requirements.txt
Agent/: bot.py  bot_factory.py
Agent/CozeAgent/: bot.py  conversation_manager.py  user_session.py
Channel/: channel.py
Channel/pinduoduo/: pdd_chnnel.py  pdd_login.py  pdd_message.py
Channel/pinduoduo/utils/API/: Set_up_online.py  __init__.py  base_request.py  get_shop_info.py  get_token.py  get_user_info.py  send_message.py
Message/: __init__.py  message.py  message_consumer.py  message_handler.py  message_queue.py
bridge/: __init__.py  context.py  reply.py
database/: __init__.py  db_manager.py  models.py
ui/: auto_reply_ui.py  keyword_ui.py  log_ui.py  main_ui.py  setting_ui.py  user_ui.py
utils/: __init__.py  logger.py
